<resources>
    <string name="app_name">SMB1</string>
    <string name="title_activity_options">OptionsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string-array name="choseColor">
        <item>GRAY</item>
        <item>RED</item>
        <item>BLUE</item>
        <item>YELLOW</item>
        <item>GREEN</item>
        <item>CYAN</item>
        <item>MAGENTA</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>